gitops/infrastructure/kube-prometheus-stack/grafana-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"

    # Certificado ACM e listeners HTTPS/HTTP
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:700213287974:certificate/88087b18-5c1a-4a45-8c8f-203e6c394800"
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP": 80}, {"HTTPS": 443}]
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    # Backend directo por HTTP (ClusterIP de Grafana)
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-port: "3000"
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
